Updated README, amended credits in HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 
-<!-- Epsilon theme for scriptogr.am 		-->
-<!-- Designed by Jordan Merrick 			-->
-<!-- www.jordanmerrick.com					-->
+<!-- 				Epsilon theme for scriptogr.am 			-->
+<!--				 Designed by Jordan Merrick 			-->
+<!-- 					www.jordanmerrick.com				-->
 
-<!-- Foundation front-end framework by ZURB	-->
-<!-- http://foundation.zurb.com				-->
+<!-- 			Foundation front-end framework by ZURB		-->
+<!-- 					http://foundation.zurb.com			-->
+
+<!-- 		League Gothic Font by League of Moveable Type	 -->
+<!-- 	http://www.theleagueofmoveabletype.com/league-gothic -->
+
+<!--			 Volkorn font provided by Google Fonts		 -->
+<!--				http://google.com/webfonts				-->
 
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -18,10 +24,12 @@
 <meta name="viewport" content="width=device-width" />
 
 <title>{{#is_post}}{{#posts}}{{title}}{{/posts}}{{/is_post}}{{#is_page}}{{#posts}}{{title}}{{/posts}}{{/is_page}}{{#is_index}}{{author}}{{/is_index}}</title>
-<link rel="stylesheet" href="/foundation.min.css">
-<link rel="stylesheet" href="/style.css">
 
-<script src="/app.js"></script>
+<!-- EDIT THE FOLLOWING 3 LINES TO REFLECT YOUR DROPBOX PUBLIC URL -->
+<link rel="stylesheet" href="https://dl.dropbox.com/u/2490493/Epsilon/foundation.min.css">
+<link rel="stylesheet" href="https://dl.dropbox.com/u/2490493/Epsilon/style.css">
+<script src="https://dl.dropbox.com/u/2490493/Epsilon/app.js"></script>
+<!-- END EDITING FOR THE THEME -->
 
 <!-- IE Fix for HTML5 Tags -->
 <!--[if lt IE 9]>
