Updated links for CSS and JS

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <title>{{#is_post}}{{#posts}}{{title}}{{/posts}}{{/is_post}}{{#is_page}}{{#posts}}{{title}}{{/posts}}{{/is_page}}{{#is_index}}{{author}}{{/is_index}}</title>
 
 <!-- EDIT THE FOLLOWING 3 LINES TO REFLECT YOUR DROPBOX PUBLIC URL -->
-<link rel="stylesheet" href="https://dl.dropbox.com/u/2490493/Epsilon/foundation.min.css">
-<link rel="stylesheet" href="https://dl.dropbox.com/u/2490493/Epsilon/style.css">
-<script src="https://dl.dropbox.com/u/2490493/Epsilon/app.js"></script>
+<link rel="stylesheet" href="/foundation.min.css">
+<link rel="stylesheet" href="/style.css">
+<script src="/app.js"></script>
 <!-- END EDITING FOR THE THEME -->
 
 <!-- IE Fix for HTML5 Tags -->
